--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -117,11 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Insert" xml:space="preserve">
+    <value>//INSSCR</value>
+  </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="Lib" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Lib\Lib.cs;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
-  <data name="Spacing" xml:space="preserve">
-    <value>            </value>
+  <data name="Version" xml:space="preserve">
+    <value>2.0.2</value>
   </data>
 </root>
